--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "Manuel Schulze",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -23,7 +22,6 @@
     "css-loader": "0.28.4",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
-    "live-server": "^1.2.1",
     "node-sass": "^4.13.0",
     "normalize.css": "^8.0.1",
     "react": "16.0.0",
@@ -34,7 +32,9 @@
     "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "uuid": "3.1.0",
-    "webpack": "3.1.0",
+    "webpack": "3.1.0"
+  },
+  "devDependencies": {
     "webpack-dev-server": "2.5.1"
   }
 }
