--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
+    "test": "jest",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
@@ -22,6 +23,7 @@
     "css-loader": "0.28.4",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
+    "jest": "20.0.4",
     "node-sass": "^4.13.0",
     "normalize.css": "^8.0.1",
     "react": "16.0.0",
