--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest",
+    "test": "jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
@@ -21,16 +21,21 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-to-json": "3.0.1",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "jest": "20.0.4",
     "node-sass": "^4.13.0",
     "normalize.css": "^8.0.1",
+    "raf": "3.3.2",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
     "react-router-dom": "^5.1.2",
+    "react-test-renderer": "^16.12.0",
     "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "uuid": "3.1.0",
